--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ myVideoFile_output.mp4
 Video_input_from_fun.mp4
 Video_output_from_fun.mp4
 .ipynb_checkpoints/line_by_line_profile-checkpoint.ipynb
+/cupy_try.py
+/hexSimProcessor-neilterminal.py
+/S_1.252021_0209_1828_Raw_Image.tif
+/.ipynb_checkpoints/Untitled-checkpoint.ipynb
