fixed reconfactor calculation when usemodulation.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Video_output_from_fun.mp4
 /hexSimProcessor-neilterminal.py
 /S_1.252021_0209_1828_Raw_Image.tif
 /.ipynb_checkpoints/Untitled-checkpoint.ipynb
+/Tests/hexsim.prof
