--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
 .idea
 __pycache__
-flythrough_3D_isosurface.m
-flythrough_3D_isosurface_20200610.m
-fun_flythrough_3D.m
-img_256_axial_x2.mat
-img_in_256.mat
-imgout_from_inplane_256.mat
-lprof0
-myVideoFile_input.avi
-myVideoFile_input.mp4
-myVideoFile_output.avi
-myVideoFile_output.mp4
-Video_input_from_fun.mp4
-Video_output_from_fun.mp4
-.ipynb_checkpoints/line_by_line_profile-checkpoint.ipynb
-/cupy_try.py
-/hexSimProcessor-neilterminal.py
-/S_1.252021_0209_1828_Raw_Image.tif
-/.ipynb_checkpoints/Untitled-checkpoint.ipynb
-/Tests/hexsim.prof
+*.prof
